--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,7 +85,7 @@ jobs:
         key: ${{ secrets.ADMIN_SSH_KEY }}
         envs:  HOST_LABEL,CERT_LABEL,TLS_LABEL
         script: |
-          VAULT_ADDR='vault.todanni.com' VAULT_TOKEN=${{ secrets.VAULT_TOKEN }} vault kv get -format yaml -field data app/rmq > .env
+          VAULT_ADDR='vault.todanni.com' VAULT_TOKEN=${{ secrets.VAULT_TOKEN }} vault kv get -format yaml -field data  ci/${{ github.event.repository.name }} > .env
           sed -i 's/: /=/g' .env
           sed -i 's/"//g' .env
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
